--- a/webpack_single_simple/package.json
+++ b/webpack_single_simple/package.json
@@ -10,6 +10,10 @@
     "showdown": "^1.6.4"
   },
   "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.22.0",
+    "babel-preset-es2015": "^6.24.0",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
