--- a/webpack_spa/package.json
+++ b/webpack_spa/package.json
@@ -4,29 +4,33 @@
   "description": "### get started:",
   "main": "index.js",
   "dependencies": {
+    "editable": "^1.1.0",
+    "jinplace": "^1.2.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "normalize-css": "^2.3.1",
-    "showdown": "^1.6.4"
+    "query-string": "^4.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --colors --progress --port 8082",
-    "build": "webpack --colors --progress",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --progress --profile --colors",
+    "build": "rm -rf ./docs && NODE_ENV=production webpack --progress --profile --colors",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preview": "NODE_ENV=production webpack-dev-server --progress --profile --colors"
   },
   "repository": {
     "type": "git",
